--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -96,8 +96,8 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- b001:\"));
 pre.shouldHave(matchText(\"barcode:.*b001\"));
-pre.shouldHave(matchText(\"content:.*\\"red shoes\\"\"));
-pre.shouldHave(matchText(\"location:.*\\"shelf 42\\"\"));
+pre.shouldHave(matchText(\"content:.*red.shoes\"));
+pre.shouldHave(matchText(\"location:.*shelf.42\"));
 
 // page 12:04
 open(\"http://localhost:42001/page/12_04\");
@@ -130,8 +130,8 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- b002:\"));
 pre.shouldHave(matchText(\"barcode:.*b002\"));
-pre.shouldHave(matchText(\"content:.*\\"red shoes\\"\"));
-pre.shouldHave(matchText(\"location:.*\\"shelf 23\\"\"));
+pre.shouldHave(matchText(\"content:.*red.shoes\"));
+pre.shouldHave(matchText(\"location:.*shelf.23\"));
 
 // page 12:07
 open(\"http://localhost:42001/page/12_07\");
@@ -164,8 +164,8 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- b003:\"));
 pre.shouldHave(matchText(\"barcode:.*b003\"));
-pre.shouldHave(matchText(\"content:.*\\"blue jeans\\"\"));
-pre.shouldHave(matchText(\"location:.*\\"shelf 1337\\"\"));
+pre.shouldHave(matchText(\"content:.*blue.jeans\"));
+pre.shouldHave(matchText(\"location:.*shelf.1337\"));
 
 // page 12:10
 open(\"http://localhost:42001/page/12_10\");
@@ -199,8 +199,8 @@ open(\"http://localhost:42002\");
 // check data note 12:12:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- red_shoes:\"));
-pre.shouldHave(matchText(\"name:.*\\"red shoes\\"\"));
-pre.shouldHave(matchText(\"price:.*$42\"));
+pre.shouldHave(matchText(\"name:.*red.shoes\"));
+pre.shouldHave(matchText(\"price:.*.42\"));
 
 // page 12:14
 open(\"http://localhost:42002/page/12_14\");
@@ -231,8 +231,8 @@ open(\"http://localhost:42002\");
 // check data note 12:15:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- blue_jeans:\"));
-pre.shouldHave(matchText(\"name:.*\\"blue jeans\\"\"));
-pre.shouldHave(matchText(\"price:.*$63\"));
+pre.shouldHave(matchText(\"name:.*blue.jeans\"));
+pre.shouldHave(matchText(\"price:.*.63\"));
 
 // page 12:17
 open(\"http://localhost:42002/page/12_17\");
@@ -264,14 +264,11 @@ if (modelMap.values().size() > 0) {
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:19:02
+// check data note 12:21:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- o0925_1:\"));
 pre.shouldHave(matchText(\"code:.*o0925_1\"));
-pre.shouldHave(matchText(\"product:.*\\"red shoes\\"\"));
-pre.shouldHave(matchText(\"customer:.*\\"Carli Customer\\"\"));
-pre.shouldHave(matchText(\"address:.*\\"Wonderland 1\\"\"));
-pre.shouldHave(matchText(\"state:.*\\"new order\\"\"));
+pre.shouldHave(matchText(\"state:.*picking\"));
 
 // check Warehouse
 open(\"http://localhost:42001\");
@@ -290,90 +287,93 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- pt_o0925_1:\"));
 pre.shouldHave(matchText(\"code:.*pt_o0925_1\"));
-pre.shouldHave(matchText(\"product:.*\\"red shoes\\"\"));
-pre.shouldHave(matchText(\"shelf:.*shelf 42, shelf 23\"));
-pre.shouldHave(matchText(\"customer:.*\\"Carli Customer\\"\"));
-pre.shouldHave(matchText(\"address:.*\\"Wonderland 1\\"\"));
+pre.shouldHave(matchText(\"product:.*red.shoes\"));
+pre.shouldHave(matchText(\"shelf:.*shelf.42..shelf.23\"));
+pre.shouldHave(matchText(\"customer:.*Carli.Customer\"));
+pre.shouldHave(matchText(\"address:.*Wonderland.1\"));
 pre.shouldHave(matchText(\"state:.*picking\"));
 
-// page 12:21
-open(\"http://localhost:42001/page/12_21\");
-
 // page 12:22
-open(\"http://localhost:42001/page/12_22\");
+open(\"http://localhost:42002/page/12_22\");
+
+// page 12:23
+open(\"http://localhost:42001/page/12_23\");
+
+// page 12:24
+open(\"http://localhost:42001/page/12_24\");
 $(\"#task\").setValue(\"pt_o0925_1\");
 $(\"#shelf\").setValue(\"shelf 42\");
 $(\"#done\").click();
 
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_22_01:\"));
+pre.shouldHave(text(\"- 12_24_01:\"));
 
 // check Warehouse
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_22_01:\"));
+pre.shouldHave(text(\"- 12_24_01:\"));
 for (DataEvent dataEvent : warehouse.getBuilder().getEventStore().values()) {
    warehouse.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = warehouse.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_22_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_24_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42001\");
-// check data note 12:22:02
+// check data note 12:24:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- pt_o0925_1:\"));
 pre.shouldHave(matchText(\"code:.*pt_o0925_1\"));
-pre.shouldHave(matchText(\"from:.*\\"shelf 42\\"\"));
+pre.shouldHave(matchText(\"from:.*shelf.42\"));
 pre.shouldHave(matchText(\"state:.*shipping\"));
 
 // check MicroShop
 open(\"http://localhost:42002\");
 pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_22_01:\"));
+pre.shouldHave(text(\"- 12_24_01:\"));
 for (DataEvent dataEvent : microShop.getBuilder().getEventStore().values()) {
    microShop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = microShop.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_22_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_24_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:23:01
+// check data note 12:25:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- o0925_1:\"));
 pre.shouldHave(matchText(\"code:.*o0925_1\"));
 pre.shouldHave(matchText(\"state:.*shipping\"));
 
-// page 12:24
-open(\"http://localhost:42001/page/12_24\");
+// page 12:26
+open(\"http://localhost:42001/page/12_26\");
 
-// page 12:25
-open(\"http://localhost:42001/page/12_25\");
+// page 12:27
+open(\"http://localhost:42001/page/12_27\");
 $(\"#order\").setValue(\"o0925_1\");
 $(\"#done\").click();
 
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_25_01:\"));
+pre.shouldHave(text(\"- 12_27_01:\"));
 
 // check MicroShop
 open(\"http://localhost:42002\");
 pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_25_01:\"));
+pre.shouldHave(text(\"- 12_27_01:\"));
 for (DataEvent dataEvent : microShop.getBuilder().getEventStore().values()) {
    microShop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = microShop.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_25_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_27_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:25:02
+// check data note 12:27:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- o0925_1:\"));
 pre.shouldHave(matchText(\"code:.*o0925_1\"));
