--- a/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
@@ -86,7 +86,7 @@ open(\"http://localhost:42001\");
 // check data note 12:00:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- common_cold:\"));
-pre.shouldHave(matchText(\"name:.*\\"common cold\\"\"));
+pre.shouldHave(matchText(\"name:.*common.cold\"));
 pre.shouldHave(matchText(\"symptoms:.*runny_nose.*cough.*hoarseness.*medium_fever.*\"));
 pre.shouldHave(matchText(\"counterSymptoms:.*chills.*joint_pain.*\"));
 // check data note 12:00:02
@@ -107,7 +107,7 @@ pre.shouldHave(matchText(\"name:.*cough\"));
 // check data note 12:00:05
 pre = $(\"#data\");
 pre.shouldHave(text(\"- runny_nose:\"));
-pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
+pre.shouldHave(matchText(\"name:.*runny.nose\"));
 // check data note 12:00:06
 pre = $(\"#data\");
 pre.shouldHave(text(\"- hoarseness:\"));
@@ -115,7 +115,7 @@ pre.shouldHave(matchText(\"name:.*hoarseness\"));
 // check data note 12:00:07
 pre = $(\"#data\");
 pre.shouldHave(text(\"- medium_fever:\"));
-pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
+pre.shouldHave(matchText(\"name:.*medium.fever\"));
 // check data note 12:00:08
 pre = $(\"#data\");
 pre.shouldHave(text(\"- chills:\"));
@@ -123,7 +123,7 @@ pre.shouldHave(matchText(\"name:.*chills\"));
 // check data note 12:00:09
 pre = $(\"#data\");
 pre.shouldHave(text(\"- joint_pain:\"));
-pre.shouldHave(matchText(\"name:.*\\"joint pain\\"\"));
+pre.shouldHave(matchText(\"name:.*joint.pain\"));
 // check data note 12:00:10
 pre = $(\"#data\");
 pre.shouldHave(text(\"- headache:\"));
@@ -131,7 +131,7 @@ pre.shouldHave(matchText(\"name:.*headache\"));
 // check data note 12:00:11
 pre = $(\"#data\");
 pre.shouldHave(text(\"- lung_noises:\"));
-pre.shouldHave(matchText(\"name:.*\\"lung noises\\"\"));
+pre.shouldHave(matchText(\"name:.*lung.noises\"));
 try {
    Thread.sleep(3000);
 } catch (Exception e) {
