--- a/test/src/test/java/uks/debuggen/party/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party/classModel.yaml
@@ -179,7 +179,7 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice:\"));
 pre.shouldHave(matchText(\"name:.*Alice\"));
-pre.shouldHave(matchText(\"email:.*a@b.de\"));
+pre.shouldHave(matchText(\"email:.*a.b.de\"));
 pre.shouldHave(matchText(\"password:.*secret\"));
 
 // page 12:06
@@ -277,7 +277,7 @@ open(\"http://localhost:42001\");
 // check data note 14:01:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
-pre.shouldHave(matchText(\"name:.*\\"SE BBQ\\"\"));
+pre.shouldHave(matchText(\"name:.*SE.BBQ\"));
 pre.shouldHave(matchText(\"date:.*Friday\"));
 pre.shouldHave(matchText(\"location:.*Uni\"));
 
