--- a/test/src/test/java/uks/debuggen/party2/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party2/classModel.yaml
@@ -179,7 +179,7 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice:\"));
 pre.shouldHave(matchText(\"name:.*Alice\"));
-pre.shouldHave(matchText(\"email:.*a@b.de\"));
+pre.shouldHave(matchText(\"email:.*a.b.de\"));
 pre.shouldHave(matchText(\"password:.*secret\"));
 
 // page 12:06
@@ -306,9 +306,9 @@ pre.shouldHave(text(\"- sE_BBQ:\"));
 // check data note 14:01:03
 pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
-pre.shouldHave(matchText(\"name:.*\\"SE BBQ\\"\"));
+pre.shouldHave(matchText(\"name:.*SE.BBQ\"));
 pre.shouldHave(matchText(\"region:.*kassel\"));
-pre.shouldHave(matchText(\"date:.*\\"after work\\"\"));
+pre.shouldHave(matchText(\"date:.*after.work\"));
 pre.shouldHave(matchText(\"address:.*Uni\"));
 
 // page 14:02
