--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -8,10 +8,10 @@
   packageSrcFolder: 	"test/src/test/java/uks/debuggen/microshop"
 
 - testMicroShop: 	org.fulib.classmodel.Clazz
-  attributes: 	testMicroShop_eventBroker
-  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import uks.debuggen.microshop.MicroShop.MicroShopService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import uks.debuggen.microshop.MicroShop.MicroShopService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  methods: 	testMicroShop_MicroShop 	testMicroShop_publish
+  attributes: 	testMicroShop_eventBroker 	testMicroShop_spark 	testMicroShop_eventQueue 	testMicroShop_history 	testMicroShop_port
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import spark.Service;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.concurrent.LinkedBlockingQueue;" 	"import static org.assertj.core.api.Assertions.assertThat;" 	"import java.util.concurrent.TimeUnit;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import uks.debuggen.microshop.MicroShop.MicroShopService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import spark.Service;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.concurrent.LinkedBlockingQueue;" 	"import static org.assertj.core.api.Assertions.assertThat;" 	"import java.util.concurrent.TimeUnit;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import uks.debuggen.microshop.MicroShop.MicroShopService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  methods: 	testMicroShop_start 	testMicroShop_postApply 	testMicroShop_subscribeAndLoadOldEvents 	testMicroShop_waitForEvent 	testMicroShop_MicroShop 	testMicroShop_publish
   model: 	c
   modified: 	false
   name: 	TestMicroShop
@@ -32,6 +32,157 @@
   propertyStyle: 	Bean
   type: 	EventBroker
   typeSignature: 	EventBroker
+
+- testMicroShop_spark: 	org.fulib.classmodel.Attribute
+  clazz: 	testMicroShop
+  id: 	TestMicroShop_spark
+  modified: 	false
+  name: 	spark
+  propertyStyle: 	Bean
+  type: 	Service
+  typeSignature: 	Service
+
+- testMicroShop_eventQueue: 	org.fulib.classmodel.Attribute
+  clazz: 	testMicroShop
+  id: 	TestMicroShop_eventQueue
+  modified: 	false
+  name: 	eventQueue
+  propertyStyle: 	Bean
+  type: 	"LinkedBlockingQueue<Event>"
+  typeSignature: 	"LinkedBlockingQueue<Event>"
+
+- testMicroShop_history: 	org.fulib.classmodel.Attribute
+  clazz: 	testMicroShop
+  id: 	TestMicroShop_history
+  modified: 	false
+  name: 	history
+  propertyStyle: 	Bean
+  type: 	"LinkedHashMap<String, Event>"
+  typeSignature: 	"LinkedHashMap<String,Event>"
+
+- testMicroShop_port: 	org.fulib.classmodel.Attribute
+  clazz: 	testMicroShop
+  id: 	TestMicroShop_port
+  modified: 	false
+  name: 	port
+  propertyStyle: 	Bean
+  type: 	int
+  typeSignature: 	int
+
+- testMicroShop_start: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	testMicroShop
+  declaration: 	"public void start()"
+  id: 	TestMicroShop_start
+  methodBody: 	"      eventQueue = new LinkedBlockingQueue<Event>();
+      history  = new LinkedHashMap<>();
+      port = 41999;
+      ExecutorService executor = Executors.newSingleThreadExecutor();
+      spark = Service.ignite();
+      spark.port(port);
+      spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
+      executor.submit(() -> System.out.println(\"test executor works\"));
+      executor.submit(this::subscribeAndLoadOldEvents);
+      executor.submit(() -> System.out.println(\"test executor has done subscribeAndLoadOldEvents\"));"
+  modified: 	false
+  modifiers: 	public
+  name: 	start
+  paramsString: 	""
+  returnType: 	void
+  signature: 	"class/TestMicroShop/method/start()"
+
+- testMicroShop_postApply: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	testMicroShop
+  declaration: 	"private String postApply(Request req, Response res)"
+  id: 	TestMicroShop_postApply
+  methodBody: 	"      String body = req.body();
+      try {
+         YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+         idMap.decode(body);
+         Map<String, Object> map = idMap.getObjIdMap();
+         for (Object value : map.values()) {
+            Event event = (Event) value;
+            eventQueue.put(event);
+         }
+      } catch (Exception e) {
+         String message = e.getMessage();
+         if (message.contains(\"ReflectorMap could not find class description\")) {
+            Logger.getGlobal().info(\"post apply ignores unknown event \" + body);
+         } else {
+            Logger.getGlobal().log(Level.SEVERE, \"postApply failed\", e);
+         }
+      }
+      return \"apply done\";"
+  modified: 	false
+  modifiers: 	private
+  name: 	postApply
+  paramsString: 	"Request req, Response res"
+  returnType: 	String
+  signature: 	"class/TestMicroShop/method/postApply(Request,Response)"
+
+- testMicroShop_subscribeAndLoadOldEvents: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	testMicroShop
+  declaration: 	"private void subscribeAndLoadOldEvents()"
+  id: 	TestMicroShop_subscribeAndLoadOldEvents
+  methodBody: 	"      ServiceSubscribed serviceSubscribed = new ServiceSubscribed()
+            .setServiceUrl(String.format(\"http://localhost:%d/apply\", port));
+      String json = Yaml.encodeSimple(serviceSubscribed);
+      try {
+         String url = \"http://localhost:42000/subscribe\";
+         HttpResponse<String> response = Unirest.post(url).body(json).asString();
+         String body = response.getBody();
+         System.out.println(\"TestMikroShop subscribed to broker\n\" + body);
+         YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+         idMap.decode(body);
+         Map<String, Object> objectMap = idMap.getObjIdMap();
+         for (Object obj : objectMap.values()) {
+            Event event = (Event) obj;
+            eventQueue.put(event);
+         }
+      } catch (Exception e) {
+         e.printStackTrace();
+      }"
+  modified: 	false
+  modifiers: 	private
+  name: 	subscribeAndLoadOldEvents
+  paramsString: 	""
+  returnType: 	void
+  signature: 	"class/TestMicroShop/method/subscribeAndLoadOldEvents()"
+
+- testMicroShop_waitForEvent: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	testMicroShop
+  declaration: 	"public Event waitForEvent(String id)"
+  id: 	TestMicroShop_waitForEvent
+  methodBody: 	"      while (true) {
+         Event e = history.get(id);
+
+         if (e != null) {
+            return e;
+         }
+
+         try {
+            e = eventQueue.poll(Configuration.timeout, TimeUnit.MILLISECONDS);
+         }
+         catch (Exception x) {
+            throw new RuntimeException(x);
+         }
+
+         if (e == null) {
+            throw new RuntimeException(\"event timeout waiting for \" + id);
+         }
+
+         System.out.println(\"Test got event \" + e.getId());
+         history.put(e.getId(), e);
+      }"
+  modified: 	false
+  modifiers: 	public
+  name: 	waitForEvent
+  paramsString: 	"String id"
+  returnType: 	Event
+  signature: 	"class/TestMicroShop/method/waitForEvent(String)"
 
 - testMicroShop_MicroShop: 	org.fulib.classmodel.FMethod
   annotations: 	"@Test"
